<resources>
    <string name="app_name">OLX</string>

    <string name="menu_inicio">Início</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_my_posts">Anúncios</string>

    <string name="valor_anuncio">R$ %1$s</string>
    <string name="place_of_publication">%1$s-%2$s, %3$s</string>
    <string name="publicacao_local">%1$s, %2$s, %3$s</string>
    <string name="publicacao_detalhe">Publicado em %1$s</string>

    <!--    Bottom Sheet Dialog-->
    <string name="text_title_bottom_sheet_dialog">Atenção</string>
    <string name="text_button_bottom_sheet_dialog">Entendi</string>

    <!--    Generics-->
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="text_send">Enviar</string>
    <string name="text_email">E-mail</string>
    <string name="text_hint_email">Email</string>
    <string name="text_save">Salvar</string>
    <string name="permission_denied">Permissão negada.</string>
    <string name="gallery_permission_denied">Se você não aceitar a permissão não poderá acessar a Galeria do dispositivo, deseja ativar a permissão agora ?</string>
    <string name="camera_permission_denied">Se você não aceitar a permissão não poderá acessar a Câmera do dispositivo, deseja ativar a permissão agora ?</string>

    <!--    Posts Fragment-->
    <string name="title_regions">Região</string>
    <string name="title_categories">Categoria</string>
    <string name="title_filters">Filtros</string>
    <string name="post_not_exists">Nenhum anúncio encontrado.</string>

    <!--    Register Fragment-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="name_empty_register_fragment">Informe um nome.</string>
    <string name="email_empty_register_fragment">Informe um e-mail.</string>
    <string name="password_empty_register_fragment">Informe uma senha.</string>
    <string name="phone_empty_register_fragment">Informe um número de telefone.</string>
    <string name="phone_not_valid_register_fragment">Informe um número de telefone válido.</string>

    <!--    Login Fragment-->
    <string name="email_empty_login_fragment">Informe seu e-mail.</string>
    <string name="password_empty_login_fragment">Informe sua senha.</string>

    <!--    Recover Password Fragment-->
    <string name="title_toolbar_recover_password_fragment">Recuperar conta</string>
    <string name="text_email_empty">Informe seu email.</string>
    <string name="text_recover_password_fragment">Pronto, já pode verificar seu e-mail.</string>
    <string name="text_message_info">Informe seu email cadastrado e você receberá um link para alterar a senha senha.</string>

    <!--    Form Post Fragment-->
    <string name="loading_save_post_form_post_fragment">Salvando anúncio...</string>
    <string name="title_empty_save_post_form_post_fragment">Informe um título para o anúncio.</string>
    <string name="price_empty_save_post_form_post_fragment">Informe um valor maior que R$ 0,00 para o anúncio.</string>
    <string name="category_empty_save_post_form_post_fragment">Escolha uma categoria para o anúncio.</string>
    <string name="description_empty_save_post_form_post_fragment">Informe uma descrição para o anúncio.</string>
    <string name="phone_empty_save_post_form_post_fragment">Informe um telefone para o anúncio.</string>
    <string name="zip_code_empty_save_post_form_post_fragment">Informe o CEP para o anúncio.</string>
    <string name="zip_code_invalid_save_post_form_post_fragment">Informe um CEP válido para o anúncio.</string>
    <string name="image_empty_post_form_post_fragment">Escolha pelo menos 3 imagens para seu anúncio.</string>
    <string name="address_invalid_form_post_fragment">Não foi possível encontrar o endereço do CEP informado. Verifique o CEP digitado ou tente novamente mais tarde.</string>
    <string name="save_form_post_fragment">Aúncio salvo com sucesso.</string>

    <!--    Form Address Fragment-->
    <string name="zip_code_empty_form_address_fragment">Informe o CEP do endereço.</string>
    <string name="zip_code_invalid_form_address_fragment">Informe um CEP válido para o endereço.</string>
    <string name="state_empty_form_address_fragment">Informe o estado do endereço.</string>
    <string name="city_empty_form_address_fragment">Informe o município do endereço.</string>
    <string name="district_empty_form_address_fragment">Informe o bairro do endereço.</string>

    <!--    Profile Fragment-->
    <string name="text_name_is_empty_profile_fragment">Informe seu nome.</string>
    <string name="text_phone_is_invalid_profile_fragment">Infrome um número válido.</string>
    <string name="text_phone_is_empty_profile_fragment">Informe seu telefone.</string>

    <!--    My Posts Fragment-->
    <string name="text_edit_post_my_posts_fragment">Deseja continuar com a edição do anúncio ?</string>
    <string name="text_button_edit_post_my_posts_fragment">Editar anúncio</string>

    <string name="text_delete_post_my_posts_fragment">Tem certeza que quer remover este anúncio de sua conta ?</string>
    <string name="text_button_delete_post_my_posts_fragment">Remover anúncio</string>

</resources>