<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/menu_home">

    <fragment
        android:id="@+id/menu_home"
        android:name="com.example.olx.fragments.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_menu_home_to_categoriesFragment"
            app:destination="@id/categoriesFragment" />
        <action
            android:id="@+id/action_menu_home_to_detailPostFragment"
            app:destination="@id/detailPostFragment" />
        <action
            android:id="@+id/action_menu_home_to_formPostFragment"
            app:destination="@id/formPostFragment" />
    </fragment>

    <fragment
        android:id="@+id/menu_meus_anuncios"
        android:name="com.example.olx.fragments.MeusAnunciosFragment"
        android:label="@string/menu_meus_anuncios"
        tools:layout="@layout/fragment_meus_anuncios" />

    <fragment
        android:id="@+id/menu_favoritos"
        android:name="com.example.olx.fragments.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/menu_perfil"
        android:name="com.example.olx.fragments.ContaFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_conta" />
    <navigation android:id="@+id/navigation"
        app:startDestination="@id/loginFragment">
        <fragment
            android:id="@+id/loginFragment"
            android:name="com.example.olx.ui.auth.LoginFragment"
            android:label="fragment_login"
            tools:layout="@layout/fragment_login" >
            <action
                android:id="@+id/action_loginFragment_to_registerFragment"
                app:destination="@id/registerFragment" />
            <action
                android:id="@+id/action_loginFragment_to_recoverPasswordFragment"
                app:destination="@id/recoverPasswordFragment" />
        </fragment>
        <fragment
            android:id="@+id/recoverPasswordFragment"
            android:name="com.example.olx.ui.auth.RecoverPasswordFragment"
            android:label="fragment_recover_password"
            tools:layout="@layout/fragment_recover_password" />
        <fragment
            android:id="@+id/registerFragment"
            android:name="com.example.olx.ui.auth.RegisterFragment"
            android:label="fragment_register"
            tools:layout="@layout/fragment_register" />
    </navigation>
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.olx.ui.filters.CategoriesFragment"
        android:label="fragment_categories"
        tools:layout="@layout/fragment_categories" >
        <argument
            android:name="allCategorys"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/detailPostFragment"
        android:name="com.example.olx.ui.post.DetailPostFragment"
        android:label="fragment_detail_post"
        tools:layout="@layout/fragment_detail_post" >
        <argument
            android:name="post"
            app:argType="com.example.olx.model.Post" />
        <action
            android:id="@+id/action_detailPostFragment_to_navigation"
            app:destination="@id/navigation" />
    </fragment>
    <fragment
        android:id="@+id/formPostFragment"
        android:name="com.example.olx.ui.post.FormPostFragment"
        android:label="fragment_form_post"
        tools:layout="@layout/fragment_form_post" >
        <action
            android:id="@+id/action_formPostFragment_to_categoriesFragment"
            app:destination="@id/categoriesFragment" />
    </fragment>

</navigation>